Refactor the backend to store vfs with archive
